# gsMap3D

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  docs.yml  release.yml  test_linux.yml
docs/: Makefile  gsmap3d_method_description.md
docs/source/: advanced_usage.md  cli_reference.md  conf.py  gsmap_cli_readmi.md  index.rst  install.rst  key_concepts.md  key_concepts.rst  ldscore_weight_matrix.md  notes.md  output_files.md  release.rst  scalability.md
docs/source/2d_tutorial/: 10x.md  index.rst  mouse_embryo.md  quick_mode.md
docs/source/3d_tutorial/: human_gastrulation.md  index.rst
docs/source/_static/: custom.css
docs/source/key_concepts/: configuration.md  index.rst  input_data_format.md
src/gsMap/: __init__.py  cauchy_combination_test.py  cli.py  config.py  format_sumstats.py  generate_ldscore.py  spatial_ldsc_multiple_sumstats.py  test_annot_ldscore.py  test_ldscore.py  test_ldscore_w_ld.py
src/gsMap/config/: __init__.py  base.py  cauchy_config.py  dataclasses.py  decorators.py  find_latent_config.py  format_sumstats_config.py  latent2gene_config.py  ldscore_config.py  quick_mode_config.py  report_config.py  spatial_ldsc_config.py  utils.py
src/gsMap/find_latent/: ST_process.py  __init__.py  config.py  find_latent_representation.py  st_process.py
src/gsMap/find_latent/GNN/: Encoder_Decoder.py  GCN.py  train_step.py
src/gsMap/find_latent/gnn/: Distribution.py  Loss.py  distribution.py  encoder_decoder.py  gcn.py  gene_former.py  loss.py  st_model.py  train_step.py
src/gsMap/latent2gene/: __init__.py  connectivity.py  entry_point.py  marker_scores.py  memmap_io.py  rank_calculator.py  row_ordering.py  row_ordering_jax.py
src/gsMap/ldscore/: __init__.py  batch_construction.py  compute.py  config.py  constants.py  dp_quantization.py  io.py  mapping.py  pipeline.py  utils.py
src/gsMap/pipeline/: __init__.py  quick_mode.py
src/gsMap/report/: __init__.py  app.py  diagnosis.py  report.py  report_data.py  template_modern.html  three_d_combine.py  visualize.py
src/gsMap/report/static/: template.html
src/gsMap/report/three_d_plot/: three_d_plot_decorate.py  three_d_plot_prepare.py  three_d_plots.py
src/gsMap/spatial_ldsc/: io.py  ldscore_quick_mode.py  spatial_ldsc_jax.py  spatial_ldsc_multiple_sumstats.py
src/gsMap/templates/: report_template.html
src/gsMap/utils/: generate_r2_matrix.py  manhattan_plot.py  regression_read.py
tests/: conftest.py  test_advanced_usage.py  test_cli.py  test_cli_parsing.py  test_custom_embedding.py  test_custom_gss.py  test_docs_cli_parsing.py  test_ldscore_weight_matrix.py  test_quick_mode_2d.py  test_quick_mode_3d.py  test_scrna_pipeline.py  test_spatial_ldsc_formats.py  test_step_by_step.py
